tests/snapshot/error/source_locations/statement/return/await_throws_module.js
let promise = new Promise(() => {});
Object.defineProperty(promise, 'constructor', { get() { throw new Error(); } });

async function *generator() {
  return promise;
}

let gen = generator();
await gen.next();